final fix on spacing

--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ header{
 }
 
 .namePage{
-    margin-left: 35%;
+    margin-left: 30%;
     color : #fcfcfc;
     margin-bottom: 5px;
 
